column fix and spacing

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ad28b9;
+  /* background: #ad28b9; */
 }
 
 .first,
@@ -66,31 +66,32 @@ body {
 
 .container {
   position: relative;
-  max-width: 90rem;
+  max-width: 110rem;
   width: 100%;
   border-radius: 8px;
   padding: 3rem;
   margin: 0 1.5rem;
-  background-color: #ebfbee;
+  /* background-color: #ebfbee; */
+  background-color: #fff;
   font-size: 1.8rem;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.container header {
+.container header h1 {
   position: relative;
-  font-size: 2rem;
-  font-weight: 600;
+  font-size: 3rem;
+  font-weight: 700;
   color: #333;
 }
 
-.container header::before {
+.container header h1::before {
   content: "";
   position: absolute;
   left: 0;
   bottom: -0.2rem;
   height: 0.3rem;
-  width: 2.7rem;
-  background-color: #229150;
+  width: 3.2rem;
+  background-color: #ad28b9;
   border-radius: 0.8rem;
 }
 
@@ -99,7 +100,12 @@ body {
   margin-top: 1.6rem;
   /* min-height: 80vh; */
   min-height: 64rem;
-  background-color: #ebfbee;
+  /* background-color: #ebfbee; */
+  background-color: #fff;
+}
+
+.course-form {
+  margin-top: 3rem;
 }
 
 /* 
@@ -157,7 +163,7 @@ form.secActive .form.first {
 form .fields .input-field {
   display: flex;
   flex-direction: column;
-  width: calc(100% / 3 - 1.5rem);
+  width: calc(100% / 2 - 1.5rem);
   /* background-color: red; */
   margin: 0.4rem 0;
 }
@@ -165,7 +171,7 @@ form .fields .input-field {
 .title {
   color: #fff;
   display: flex;
-  background-color: #229150;
+  background-color: #bd53c7;
   margin: 1.2rem auto;
   align-items: center;
   justify-content: center;
@@ -174,10 +180,11 @@ form .fields .input-field {
 }
 
 .input-field label {
-  font-size: 1.4rem;
-  font-weight: 500;
+  font-size: 1.6rem;
+  font-weight: 400;
   color: #2e2e2e;
 }
+
 .input-field input,
 select {
   outline: none;
@@ -186,7 +193,7 @@ select {
   font-size: 14px;
   font-weight: 400;
   padding: 0 1.5rem;
-  height: 3.2rem;
+  height: 4.8rem;
   margin: 0.8rem 0;
   color: #333;
 }
@@ -197,6 +204,7 @@ select {
 
 .input-field input:is(:focus, :valid) {
   box-shadow: 0 0.3rem 0.6rem rgba(0, 0, 0, 0.13);
+  border: solid 1px #bd53c7;
 }
 
 .input-field input[type="date"] {
@@ -228,7 +236,7 @@ select {
 
 .passport-photo .input-field {
   display: flex;
-  width: 500px;
+  width: 50rem;
 }
 
 .passport-photo-label {
@@ -241,6 +249,7 @@ select {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 3rem;
 }
 
 .passport input[type="file"] {
@@ -248,10 +257,11 @@ select {
 }
 
 .passport {
-  max-width: 15rem;
-  max-height: 15rem;
+  max-width: 20rem;
+  max-height: 20rem;
   display: flex;
   margin-right: 2rem;
+  /* margin-bottom: 10rem; */
 }
 
 .passport img {
@@ -262,9 +272,10 @@ select {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 3.2rem;
-  max-width: 8rem;
-  width: 100%;
+  /* height: 4.5rem; */
+  /* max-width: 8rem; */
+  padding: 15px 30px;
+  /* width: 100%; */
   border: none;
   color: #fff;
   background-color: #ad28b9;
